[tool.poetry]
name = "hken-cashmachine"
version = "0.1.0"
description = "cash machine"
authors = ["atitawat <atitawat.pol@gmail.com>"]
license = "open source"

[tool.poetry.dependencies]
python = "^3.9"
ccxt = "^1.85.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
